// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing on GitExpertApp Component Should be displeyed a list categories 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Halo"
      key="Halo"
    />
    <GifGrid
      category="GOD"
      key="GOD"
    />
    <GifGrid
      category="Nedd For Speed"
      key="Nedd For Speed"
    />
  </ol>
</Fragment>
`;

exports[`Testing on GitExpertApp Component Should generate snapshot of GitExpertApp component 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
